fix: actuator/caches가 안보이는 문제 수정